[project]
name = "mammoth-coffee"
version = "0.2.0"
description = ""
authors = [
    {name = "dokyungkim", email = "4dovidovi4@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
